# django_images

./: .gitignore  README.md  pyproject.toml
base/: .env.example  manage.py
base/django_images/: asgi.py  settings.py  urls.py  wsgi.py
base/images/: admin.py  apps.py  forms.py  models.py  receivers.py  urls.py  views.py
base/images/migrations/: 0001_initial.py
base/images/templates/main/: _image.html  create_image.html  image_confirm_delete.html  image_detail.html  image_update.html  index.html  list_images.html
